--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=demo
+spring.datasource.url=jdbc:h2:mem:todoapi;MODE=PostgreSQL
 spring.datasource.data-source-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:todoapi;DB_CLOSE_ON_EXIT=TRUE;MODE=MySQL
 spring.datasource.username=sa
 spring.datasource.password=
