--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:h2:mem:todoapi;MODE=PostgreSQL
 spring.datasource.data-source-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+# これを追加！起動時に schema.sql を実行してテーブルを作る設定
+spring.sql.init.mode=always
